7948 Oppgrader Spring Boot 3→4 og migrer Jackson 2→3 (#3272)
Oppgraderer Spring Boot fra 3.5.7 til 4.0.3 og migrerer Jackson 2 til
Jackson 3 i én samlet PR.

[MELOSYS-7948](https://jira.adeo.no/browse/MELOSYS-7948)

## Endringer

### Spring Boot 4.0-oppgradering
- Spring Boot 3.5.7 → 4.0.3
- Springfox erstattet med springdoc-openapi 3.0.1
- Deprecated APIer fra Kafka, Hibernate og Spring MVC fjernet/tilpasset
- Hibernate 7: `StaleObjectStateException`-håndtering i
`ProsessinstansBehandler` for race condition ved `truncateAllTables()` i
integrasjonstester
- `UrlHandlerFilter` (`org.springframework.web.filter`) for trailing
slash-matching (fjernet i SB4)
- `graphql-kickstart` auto-konfigurasjon ekskludert (inkompatibel med
Spring Boot 4.0)
- `KodeDeserializer`: null-sjekk for `getEnumConstants()` — returnerer
null for ikke-enum-typer
- Testkonfig: `@SpykBean` → `@MockkSpyBean`, `DEFINED_PORT` →
`RANDOM_PORT`, `junit-platform.properties` lagt til
- `jaxws-rt` versjon sentralisert i root `dependencyManagement`

### Jackson 3-migrering
- Alle Jackson-importer migrert fra `com.fasterxml.jackson` →
`tools.jackson` (~182 filer)
- `WebConfig.objectMapper()` returnerer `JsonMapper` for korrekt Spring
Boot 4 auto-konfigurasjon
- `SaksopplysningDokumentConverter`: datoformat arrays → ISO-strenger,
backward-kompatibelt
- `SedGrunnlagDto`: `@JsonTypeInfo(use = Id.CUSTOM)` for korrekt custom
type resolver i Jackson 3
- `SkjemaApiTypeMixins`: polymorf deserialisering av eksterne
Kotlin-typer uten no-arg konstruktør
- `@JsonProperty` for ikke-ASCII feltnavn (`årsavregningsår`, `år`
m.fl.)
- `@JsonCreator` på `AnmodningsperiodePostDto` for korrekt
konstruktørvalg i Jackson 3
- `kotlin-stdlib-common` ekskludert fra `kotlin-logging-jvm`
(versjonskonflikten med Kotlin 2.x)
- `LovvalgsperiodeService`: sletting forenklet til JPA `orphanRemoval`

### ObjectMapper-arkitektur
Tre separate ObjectMapper-instanser med ulike konfigurasjoner:

| Instans | Konfigurasjon |
|---------|--------------