@@ -9,7 +9,7 @@ public interface BasicAuthAware {
     default String basicAuth() {
         Environment env = EnvironmentHandler.getInstance().getEnv();
         return "Basic " + Base64.getEncoder().encodeToString(
-            String.format("%s:%s", env.getRequiredProperty("systemuser.username"), env.getRequiredProperty("systemuser.password"))
+            "%s:%s".formatted(env.getRequiredProperty("systemuser.username"), env.getRequiredProperty("systemuser.password"))
                 .getBytes(StandardCharsets.UTF_8));
     }
 }
